--- a/server.properties
+++ b/server.properties
@@ -18,7 +18,7 @@ snooper-enabled=true
 level-type=DEFAULT
 hardcore=false
 enable-command-block=false
-max-players=100
+max-players=10
 network-compression-threshold=256
 max-world-size=29999984
 spawn-npcs=true
@@ -29,7 +29,7 @@ resource-pack=
 spawn-animals=true
 white-list=false
 generate-structures=true
-online-mode=false
+online-mode=true
 max-build-height=256
 level-seed=
 enable-rcon=false
