--- a/server.properties
+++ b/server.properties
@@ -18,7 +18,8 @@ snooper-enabled=true
 level-type=DEFAULT
 hardcore=false
 enable-command-block=false
-max-players=10
+max-players=100
+spawn-protection-size=0
 network-compression-threshold=256
 max-world-size=29999984
 spawn-npcs=true
@@ -33,4 +34,4 @@ online-mode=true
 max-build-height=256
 level-seed=
 enable-rcon=false
-motd=Arab MC HosT 
+motd=\u00A7k12 \u00A7dArab \u00A7bMC \u00A7cHosT \u00A7f\u00A7k12\n\u00A7d\u00A79http://arabmc-host.tk   
